switches from javafx to swing for compatibility