@@ -1,24 +1,31 @@
 plugins {
-    id("application")
-    id("java")
+    id 'java'
+    id 'application'
 }
+
+group 'com.connectm'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
+sourceCompatibility = '17'
+targetCompatibility = '17'
+
 dependencies {
-    implementation 'org.openjfx:javafx-controls:17.0.2'
-    implementation 'org.openjfx:javafx-fxml:17.0.2'
+    // FlatLaf gives you a modern look and feel
+    implementation 'com.formdev:flatlaf:3.0'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
 }
 
 application {
+    // Fully-qualified main class
     mainClass = 'com.connectm.Main'
 }
 
-run {
-    jvmArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'javafx.controls,javafx.fxml'
-    ]
+test {
+    useJUnitPlatform()
 }
